--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+app/assets/javascripts/bundle.js.map
+app/assets/javascripts/bundle.js
 
 /node_modules
 /yarn-error.log
