--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
