--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-select": "^1.2.0",
     "react-typing": "^1.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.10.0"
   },
